# xsdk-hmos

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  ble.cpp  ble.h  napi_init.cpp  nativebleadapter.h
entry/src/main/cpp/api/: napi_ble_adapter.cpp  napi_ble_adapter.h  napi_ble_controller.cpp  napi_ble_controller.h  object_wrap.cpp
entry/src/main/cpp/constant/cgm/: aidexxoperation.h
entry/src/main/cpp/controller/: blecontroller.cpp  blecontroller.h  blecontrollerinfo.h
entry/src/main/cpp/controller/bgm/: bgmcontroller.h
entry/src/main/cpp/controller/cgm/: aidexxcontroller.cpp  aidexxcontroller.h  aidexxoperation.h  cgmcontroller.h
entry/src/main/cpp/controller/pump/: pumpcontroller.h
entry/src/main/cpp/devcomm/: devcommclass.cpp
entry/src/main/cpp/parser/cgm/: aidexxbroadcastparser.cpp  aidexxdefaultparamsparser.cpp  aidexxdeviceparser.h  aidexxinstanthistoryparser.cpp
entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
entry/src/main/ets/ble/: AidexBleAdapter.ts  BleAdapter.ts  BleController.ts  BleDeviceStore.ts  DeviceModel.ts  UuidUtil.ts
entry/src/main/ets/entity/: TransmitterEntity.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: PermissionUtil.ets
entry/src/main/resources/base/element/: string.json
